# parse-jsonschema

./: Cargo.toml  LICENSE
src/: lib.rs
tests/: indexmap.rs  parse_examples.rs  works_with_preserve_order.rs
tests/economic/: customers.customerNumber.contacts.contactNumber.get.schema.json  customers.get.schema.json
