[package]
name = "parse-jsonschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.2.6", features = ["serde"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[features]
preserve_order = ["dep:indexmap"]