[package]
name = "parse-jsonschema"
version = "0.0.1"
edition = "2021"
description = """
A create for parsing earlier versions of json-schema and fitting it into the structure of schemafy
"""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
schemars = {version = "0.8.16", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
